# backend-login

./: README.md
backend/: pyproject.toml
backend/config/: settings.py  urls.py
backend/usuario/: cadastro.py  login.py  models.py  resetPassword.py
backend/usuario/migrations/: 0001_initial.py
frontend/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: Movies.js
frontend/src/components/: CentralComp.vue  HeaderComp.vue
frontend/src/router/: index.js
frontend/src/stores/: DefineStore.js
frontend/src/views/: AboutView.vue  HomeView.vue  MainView.vue
